# homelab

./: .agnix.toml  .ansible-lint  .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  .sops.yaml  .yamllint.yaml  .yamllint.yml  AGENTS.md  CLAUDE.md  PLANS.md  README.md  pyproject.toml  renovate.json
.claude/: settings.json  settings.local.json
.claude/hooks/: compact-checkpoint.sh  flux-reminder.sh  pre-commit-check.sh  sops-guard.sh  terraform-plan.sh
.claude/rules/: fluxcd.md  networking.md  observability.md  patterns.md  storage.md  talos.md
.codex/: config.toml  retrieval.yaml
.codex/agents/: memory_agent_builder.toml  memory_consolidator.toml  repo_migration_worker.toml  verifier.toml
.codex/hooks/: flux_reminder.sh  graphify_context.sh  implementation_workflow_guard.sh  pre_commit_check.sh  sops_guard.sh  stop_self_verify.sh  terraform_plan.sh  user_prompt_submit.sh  verifier_push_guard.sh
.codex/runbooks/: README.md  cloudflare-tunnels.md  configure-nfs-with-proxmox.md  resize-pvc.md
.codex/scripts/: codex_observe.py  create_implementation_pr.sh  install_implementation_secrets.sh  prepare_development_smoke_secrets.sh  run_grafana_mcp.sh  stage_implementation_secrets.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  grafana-mcp.sh  postCreateCommand.sh  poststart.sh
.github/instructions/: README.md  kubernetes.instructions.md  terraform.instructions.md
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
ansible/: README.md  ansible.cfg  create-cluster.yml  create-k8s-cluster.yml  create-ubuntu-template.yml  create-vm.yml  deploy_lab.yml  hosts  install_dependencies.yml  inventory  provision-vm.yml  proxmox_manage.yml  secrets.yml.example  setup_swarm.yml  site.yml  swarm_deploy.yml  swarm_setup.yml  user_manage.yml
docs/: architecture.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
helm/: bootstrap.sh
kubernetes/: README.md
runbooks/: cloudflare_tunnels.md  configure_nfs_with_proxmox.md  resize_pvc.md
scripts/: NEXUS.md  SYNOLOGY.md  UNIFI.md  kube-aliases.sh
terraform/: .terraform.lock.hcl  README.md  cilium.tf  cluster.tf  dns.tf  flux.tf  kubeconfig.tf  main.tf  node_control_planes.tf  node_workers.tf  provider.tf  talos.tf  variables.tf
tools/: foundry_bluegreen.py
tools/agent-memory/: pyproject.toml
tools/agent-memory/src/agent_memory/: __init__.py  cli.py  codex_mcp.py  compaction.py  consolidation.py  extraction.py  lint.py  models.py  policy.py  storage.py
tools/agent-memory/tests/: test_compaction.py  test_consolidation.py  test_lint.py  test_policy.py
(+958 files in other folders)
