[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-python-tooling"
version = "0.1.0"
description = "Shared local Python helpers for the homelab repository."
requires-python = "==3.14.5"

[tool.setuptools.packages.find]
where = ["tools/lib"]
