[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Local Codex memory compaction and consolidation scaffold."
requires-python = "==3.14.6"
dependencies = []

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
